z-index fix for holders

--- a/src/index.css
+++ b/src/index.css
@@ -76,6 +76,10 @@ a:visited {
   width: 100%;
 }
 
+.z-index-1 {
+  z-index: 1;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
